--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.74.0",
   "private": true,
   "engines": {
-    "node": ">=20.15",
-    "pnpm": ">=9.15"
+  "node": ">=18.17 <=22"
   },
   "packageManager": "pnpm@9.15.1",
   "scripts": {
